--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,12 @@
-<ol class="post-list">
+
+<main class="bg-danger container">
+  
+</main><ol class="post-list">
   {{#each posts as |post|}}
   <li>
     {{> post-info post }}
   </li>
   {{/each}}
 </ol>
+ WELCOME  TO MVC TECH BLOCK 
+
